Added languages and their letters