@@ -1,5 +1,7 @@
 package com.testament.veltahleon.rest.places;
 
+import com.testament.veltahleon.dto.places.NationDTO;
+import com.testament.veltahleon.mappers.places.NationMapper;
 import com.testament.veltahleon.model.entities.places.Nation;
 import com.testament.veltahleon.responses.CustomResponse;
 import com.testament.veltahleon.services.ifc.places.NationService;
@@ -13,7 +15,7 @@ import org.springframework.web.bind.annotation.*;
 
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Map;
@@ -27,27 +29,34 @@ public class NationController {
     @Autowired
     private NationService nationService;
 
+    @Autowired
+    private NationMapper nationMapper;
+
+    public final String imagePath = "src/main/resources/assets/images/flags/";
+
     @GetMapping("/nations")
-    public ResponseEntity<CustomResponse> getPaginatedNations(@RequestParam(value = "pageNumber", defaultValue = "0") int pageNumber, @RequestParam(value = "pageSize", defaultValue = "10") int pageSize) {
-        List<Nation> nations = (List<Nation>) nationService.getNationsWithPagination(pageNumber, pageSize);
+    public ResponseEntity<CustomResponse> getPaginatedNations(@RequestParam(value = "pageNumber", defaultValue = "1") int pageNumber, @RequestParam(value = "pageSize", defaultValue = "5") int pageSize) {
+        List<Nation> nations = (List<Nation>) nationService.getNationsWithPagination((pageNumber - 1), pageSize);
+        List<NationDTO> nationsDTO = nations.stream().map(n -> nationMapper.convertToDTO(n)).toList();
         return ResponseEntity.ok(CustomResponse.builder()
                 .timestamp(LocalDateTime.now())
                 .status(HttpStatus.OK)
                 .statusCode(HttpStatus.OK.value())
-                .data(Map.of("dataRetrieved", nations))
-                .message(nations.size() + " nations retrieved from page: " + (pageNumber + 1))
+                .data(Map.of("dataRetrieved", nationsDTO))
+                .message(nations.size() + " nations retrieved from page: " + pageNumber)
                 .build()
         );
     }
 
-    @GetMapping("/Nations/all")
+    @GetMapping("/nations/all")
     public ResponseEntity<CustomResponse> getAllNations() {
         List<Nation> nations = (List<Nation>) nationService.getNations();
+        List<NationDTO> nationsDTO = nations.stream().map(n -> nationMapper.convertToDTO(n)).toList();
         return ResponseEntity.ok(CustomResponse.builder()
                 .timestamp(LocalDateTime.now())
                 .status(HttpStatus.OK)
                 .statusCode(HttpStatus.OK.value())
-                .data(Map.of("dataRetrieved", nations))
+                .data(Map.of("dataRetrieved", nationsDTO))
                 .message("All nations retrieved!")
                 .build()
         );
@@ -55,11 +64,12 @@ public class NationController {
 
     @GetMapping("/nation/{id}")
     public ResponseEntity<CustomResponse> getNationByID(@PathVariable Long id) {
+        NationDTO nationDTO = nationMapper.convertToDTO(nationService.getNationByID(id));
         return ResponseEntity.ok(CustomResponse.builder()
                 .timestamp(LocalDateTime.now())
                 .status(HttpStatus.OK)
                 .statusCode(HttpStatus.OK.value())
-                .data(Map.of("datumRetrieved", nationService.getNationByID(id)))
+                .data(Map.of("datumRetrieved", nationDTO))
                 .message("Nation retrieved!")
                 .build()
         );
@@ -67,28 +77,30 @@ public class NationController {
 
     @GetMapping("/nation/name")
     public ResponseEntity<CustomResponse> getNationByNationName(@RequestParam(value = "nationName") String nationName) {
+        NationDTO nationDTO = nationMapper.convertToDTO(nationService.getNationByName(nationName));
         return ResponseEntity.ok(CustomResponse.builder()
                 .timestamp(LocalDateTime.now())
                 .status(HttpStatus.OK)
                 .statusCode(HttpStatus.OK.value())
-                .data(Map.of("datumRetrieved", nationService.getNationByName(nationName)))
+                .data(Map.of("datumRetrieved", nationDTO))
                 .message("Nation retrieved!")
                 .build()
         );
     }
 
-    @GetMapping(value = "/nation/image/{fileName}", produces = {MediaType.IMAGE_PNG_VALUE, MediaType.IMAGE_JPEG_VALUE, MediaType.IMAGE_GIF_VALUE})
-    public byte[] getNationFlag(@PathVariable("fileName") String fileName) throws IOException {
-        return Files.readAllBytes(Paths.get("src/main/java/com/testament/veltahleon/assets/images/flags/" + fileName));
+    @GetMapping(path = "/nations/images/{imageName}", produces = MediaType.IMAGE_PNG_VALUE)
+    public byte[] getFlagImage(@PathVariable("imageName") String imageName) throws IOException {
+        return Files.readAllBytes(Path.of(imagePath + imageName));
     }
 
     @PostMapping("/save/nation")
-    public ResponseEntity<CustomResponse> saveNation(@RequestBody @Valid Nation nation) {
+    public ResponseEntity<CustomResponse> saveNation(@RequestBody @Valid NationDTO nationDTO) {
+        Nation nation = nationMapper.convertToEntity(nationDTO);
         return ResponseEntity.ok(CustomResponse.builder()
                 .timestamp(LocalDateTime.now())
                 .status(HttpStatus.OK)
                 .statusCode(HttpStatus.OK.value())
-                .data(Map.of("dataSaved", nationService.saveNation(nation)))
+                .data(Map.of("dataSaved", nationMapper.convertToDTO(nationService.saveNation(nation))))
                 .message("Nation saved!")
                 .build()
         );
@@ -107,24 +119,26 @@ public class NationController {
     }
 
     @PatchMapping("/update/nation/{id}")
-    public ResponseEntity<CustomResponse> updateNation(@PathVariable Long id, @RequestBody Nation nation) {
+    public ResponseEntity<CustomResponse> updateNation(@PathVariable Long id, @RequestBody @Valid NationDTO nationDTO) {
+        Nation nation = nationMapper.convertToEntity(nationDTO);
         return ResponseEntity.ok(CustomResponse.builder()
                 .timestamp(LocalDateTime.now())
                 .status(HttpStatus.OK)
                 .statusCode(HttpStatus.OK.value())
-                .data(Map.of("dataUpdated", nationService.updateNation(id, nation)))
+                .data(Map.of("dataUpdated", nationMapper.convertToDTO(nationService.updateNation(id, nation))))
                 .message("Nation updated!")
                 .build()
         );
     }
 
-    @PutMapping("/update/{id}")
-    public ResponseEntity<CustomResponse> modifyNation(@PathVariable Long id, @RequestBody Nation nation) {
+    @PutMapping("/modify/nation/{id}")
+    public ResponseEntity<CustomResponse> modifyNation(@PathVariable Long id, @RequestBody @Valid NationDTO nationDTO) {
+        Nation nation = nationMapper.convertToEntity(nationDTO);
         return ResponseEntity.ok(CustomResponse.builder()
                 .timestamp(LocalDateTime.now())
                 .status(HttpStatus.OK)
                 .statusCode(HttpStatus.OK.value())
-                .data(Map.of("dataUpdated", nationService.modifyNation(id, nation)))
+                .data(Map.of("dataUpdated", nationMapper.convertToDTO(nationService.updateNation(id, nation))))
                 .message("Nation updated!")
                 .build()
         );
